Fix mobile menu, don't show animation on mobile

--- a/slt/src/app/app.component.scss
+++ b/slt/src/app/app.component.scss
@@ -2,9 +2,14 @@
 
 $menuHeight: 50px;
 $menuWidth: 200px;
+
 .svg-wrapper {
+  @media(min-width: $lg) {
+    display: block;
+  }
   width: 105%;
   position: absolute;
+  display: none;
 }
 
 .menu {
